--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  table_calendar: ^3.0.8
-  shared_preferences: ^2.0.15
+  table_calendar: ^3.0.0
+  shared_preferences: ^2.0.11
   lottie: ^2.0.0
   dio: ^4.0.6
   cupertino_icons: ^1.0.6
@@ -26,6 +26,8 @@ dependencies:
   animated_bottom_navigation_bar: ^1.2.0
   provider: ^6.1.2
   intl: ^0.19.0
+  image_picker: ^0.8.4+4
+
 
 dev_dependencies:
   flutter_test:
